--- a/less/basic.less
+++ b/less/basic.less
@@ -1,6 +1,11 @@
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 html, body, h1, h2, h3, h4, h5, h6, p, ul {
   padding: 0;
@@ -35,4 +40,11 @@ body {
   font-size: 13px;
   font-weight: 100;
   color: #333333;
+}
+.no-select {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
