--- a/less/fluid.less
+++ b/less/fluid.less
@@ -8,6 +8,11 @@
       align-items: center;
       .literal {
         margin-bottom: 15px;
+        text-align: center;
+      }
+      .tags {
+        -webkit-justify-content: center;
+        justify-content: center;
       }
     }
   }
