--- a/less/module.less
+++ b/less/module.less
@@ -75,7 +75,7 @@
               content: "#";
             }
             a, a:link {
-              color: #999999;
+              text-decoration: none;
             }
           }
         }
