reduce image size on home list, add create page

--- a/_sass/fluid.scss
+++ b/_sass/fluid.scss
@@ -8,6 +8,7 @@
       flex-flow: column nowrap;
       -webkit-align-items: center;
       align-items: center;
+      padding: 0 5px;
       .literal {
         margin-bottom: 15px;
         text-align: center;
