--- a/_sass/module.scss
+++ b/_sass/module.scss
@@ -6,7 +6,7 @@
   .logo {
     width: 270px;
     height: 130px;
-    background-image: url("../asset/image/ngao.png");
+    background-image: url("../asset/image/logo-dung-hut.svg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 30%;
