--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,11 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title}}{% endif %}</title>
   <meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
-  <meta name="keywords" content="Thuốc lá" />
+  <meta name="keywords" content="Weblog, Ngao, Những, Điều, Bé, Nhỏ, Mèo" />
 
   <meta property="og:url" content="http://www.ngaaaaalaconmeooooo.com" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Đừng hút thuốc" />
+  <meta property="og:site_name" content="Nga Là Con Mèo" />
   <meta property="og:title" content="{% if page.og-title %}{{ page.og-title }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
   <meta property="og:description" content="{% if page.og-description %}{{ page.og-description | strip_html | strip_newlines | truncate: 160 }}{% elsif page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
   <meta property="og:image" content="http://www.ngaaaaalaconmeooooo.com/logo-og.png" />
