--- a/_layouts/post-default.html
+++ b/_layouts/post-default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
   <body>
-    <div class="container post">
+    <div class="container">
       {% include header.html %}
 
       {{ content }}
