--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: post-default
 <section class="hanh-tinh planet">
     <div class="wrapper">
         <label for="{{ page.year }}-{{ page.month }}-{{ page.day }}-{{ page.hour }}-{{ page.minute }}-{{ page.second }}-{{ page.id }}" class="decorate">
-            <img src="{{ page.imgUrl }}" alt="{{ page.imgAlt }}" />
+            <img src="/nhung-dieu-be-nho/{{ page.imgUrl }}" alt="{{ page.imgAlt }}" />
         </label>
         <article class="literal">
             <div class="wrapper">
